tests/invalid/bad_lui.s
  .text

  .global _start
_start:
  lui r2, r2, 0xA000
